SSC-2351 Lazy load cause image to not be displayed on mobile - Cruise page, fix lazy loading on cruise page tab photo and video

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-photovideo.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruise-photovideo.less
@@ -98,20 +98,4 @@
             }
         }
     }
-
-    @media screen and (max-width: @screen-sm) {
-        .c-cruise__gallery__item {
-            display: none;
-        }
-
-        .c-cruise__gallery__featured:first-child {
-            .c-cruise__gallery__featured__left:first-child .c-cruise__gallery__item:first-child {
-                display: block;
-            }
-        }
-
-        .open .c-cruise__gallery__item {
-            display: block;
-        }
-    }
 }
